Revision history for Perl extension Feersum

0.980
        psgix.io support!
        Add missing JSON::XS test-dep.

0.971 Wed Oct  6 16:21:00 2010 -0700
        Fix the feersum script.

0.97  Wed Oct  6 15:00:00 2010 -0700
        Full Plack::Test::Suite compliance!
        Handle 304 responses properly.
        Don't manually steal TEMP vars.

0.961 Wed Oct  6 08:40:00 2010 -0700
        Fix building under threaded perls.
        Work around a bug (?) in 5.12.1 when declaring -DDEBUGGING.

0.96  Fri Oct  1 15:30:00 2010 -0700
        Support Tatsumaki running under Feersum.
        Content-Type is now in the CONTENT_TYPE env.

0.95  Fri Oct  1 13:45:00 2010 -0700
        Specify Plack >= 0.995 version for testing & recommending
        Experiment with close() rather than shutdown() for ending connections.
        Actually install bin/feersum as a script
        Fix coredumps/hangs due to improper refcounting.
        Fix examples, Add a chat app example.

0.94  Thu Sep 30 22:45:00 2010 -0700
        Major documentation rewrite.
        Deprecated the "delayed response" part of the Feersum API in favor of the "streamed response" API.
        Allow for tied variables in the response.
        Move the IO::Handle response reading code into XS.

0.93  Tue Sep 29 01:30:00 2010 -0700
        First CPAN release.
        Redo PSGI streaming responses (mostly for code clarity).
        Fixes for Perl 5.8.x

0.92  Tue Sep 28 22:18:01 2010 -0700
        Support "Connection:close" style streaming for 1.0 clients.
        Support IO::Handle-like responses for PSGI handlers.
        Add REMOTE_ADDR and REMOTE_PORT to env.

0.91  Sun Sep 19 15:33:39 2010 -0700
        Support running Feersum under plackup.
        Remove AnyEvent::HTTP dependency.
        Make $r->env() calls faster.

0.90  Mon Sep  6 16:35:00 2010
        Initial PSGI 1.03 support (except for IO::Handle-like responses)

0.02  Fri Apr 23 10:55:54 2010
        Renamed a good chunk of the functions & classes.